--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <app-header></app-header>
 <div class="container">
   <div class="row">
-<div class="col-md-1">Hi</div>
-<div class="col-md-3">Name is Zelawlaw</div>
-</div></div>
-<div class="btn btn-primary col-md-1">details</div>
+<app-recipes></app-recipes>
+<app-shoppinglist></app-shoppinglist>
