--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,12 +7,12 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Recipes</a>
+        <a class="nav-link" href="#" (click)="onSelect('recipes')">Recipes</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Shopping List</a>
+        <a class="nav-link" href="#" (click)="onSelect('shoppinglist')">Shopping List</a>
       </li>
-    </ul>  
+    </ul>
     <ul class="navbar-nav ml-auto">
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" role="button">Manage</a>
@@ -22,6 +22,6 @@
         </ul>
       </li>
     </ul>
-   
+
   </div>
 </nav>
