--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,8 +1,13 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipelist></app-recipelist>
+    <app-recipelist (selectedRecipeL2)="selectedRecipe($event)"></app-recipelist>
   </div>
   <div class="col-md-7">
-    <app-recipedetail></app-recipedetail>
+    <app-recipedetail  *ngIf="selectiondone;else elseTemplate"
+     [selectedRecipe4Detail]="getSelectedRecipe()"></app-recipedetail>
+     
+    <ng-template #elseTemplate>
+      <p>Please Select a Recipe!</p>
+    </ng-template>
   </div>
 </div>
