--- a/src/app/recipes/recipedetail/recipedetail.component.html
+++ b/src/app/recipes/recipedetail/recipedetail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="" alt="" class="img-responsive">
+   <img [src]="selectedRecipe.imagePath" alt="{{selectedRecipe.name}}" style="max-height: 300px;">
   </div>
 </div>
 <div class="row">
@@ -22,7 +22,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-   <p>{{selectedRecipe.description}}</p> 
+    <p>{{selectedRecipe.description}}</p>
   </div>
 </div>
 <div class="row">
