--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,12 +13,12 @@
         <a class="nav-link" href="#" (click)="onSelect('shoppinglist')">Shopping List</a>
       </li>
     </ul>
-    <ul class="navbar-nav ml-auto">
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" role="button">Manage</a>
-        <ul class="dropdown-menu">
-          <li class><a href="#">Save Data</a></li>
-          <li><a href="#">Fetch Data</a></li>
+    <ul appDropDown class="navbar-nav d-flex">
+      <li  class="dropstart ">
+        <a  href="#" class="dropdown-toggle " role="button">Manage</a>
+        <ul  class="dropdown-menu">
+          <li class="dropdown-item"><a href="#">Save Data</a></li>
+          <li class="dropdown-item"><a href="#">Fetch Data</a></li>
         </ul>
       </li>
     </ul>
