changed addtoShoppinglist to use push & spread

--- a/src/app/recipes/recipelist/recipelist.component.html
+++ b/src/app/recipes/recipelist/recipelist.component.html
@@ -6,8 +6,7 @@
 
     <app-recipeitem
     *ngFor="let recipeEl of recipes"
-    [recipe]="recipeEl"
-    (click) ="selectedRecipe(recipeEl)"></app-recipeitem>
+    [recipe]="recipeEl"></app-recipeitem>
 
   </div>
 </div>
