--- a/src/app/recipes/recipedetail/recipedetail.component.html
+++ b/src/app/recipes/recipedetail/recipedetail.component.html
@@ -17,7 +17,7 @@
       >Manage Recipe</button>
       <li class="dropdown">
     <ul  class="dropdown-menu">
-      <li class="dropdown-item"><a href="#">To Shopping list</a></li>
+      <li class="dropdown-item"><a href="#" (click)="addToShoppingList()">To Shopping list</a></li>
       <li class="dropdown-item"><a href="#">Edit Recipe</a></li>
       <li class="dropdown-item"><a href="#">Delete</a></li>
     </ul>
@@ -32,6 +32,11 @@
 </div>
 <div class="row">
   <div class="col-sx-12">
-    Ingredients
+    <ul class="list-group">
+      <li class="list-group-item"
+      *ngFor="let ingredient of selectedRecipe.ingredients">
+     {{ingredient.name}} - {{ingredient.amount}}
+    </li>
+    </ul>
   </div>
 </div>
