--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,7 +3,7 @@
     <app-recipelist></app-recipelist>
   </div>
   <div class="col-md-7">
-    <app-recipedetail  *ngIf="selectiondone;else elseTemplate"
+    <app-recipedetail  *ngIf="focusRecipe;else elseTemplate"
     ></app-recipedetail>
 
     <ng-template #elseTemplate>
