--- a/src/app/recipes/recipelist/recipeitem/recipeitem.component.html
+++ b/src/app/recipes/recipelist/recipeitem/recipeitem.component.html
@@ -1,4 +1,6 @@
-<a href="#" class="list-group-item clearfix"  (click)="onSelected()">
+<a  class="list-group-item clearfix" 
+[routerLink]="[index]" routerLinkActive="active" 
+>
   <div class="float-start">
     <h4 class="list-group-item-heading">
      {{recipe.name}}
