--- a/src/app/recipes/recipelist/recipelist.component.html
+++ b/src/app/recipes/recipelist/recipelist.component.html
@@ -1,12 +1,17 @@
 <div class="row">
-  <div class="col-xs-12"> New Recipe</div>
+  <div class="col-xs-12"> 
+   <button class="btn btn-success" (click)="createRecipe()">New Recipe</button>
+  
+  </div>
 </div>
 <div class="row">
   <div class="list-group col-xs-12">
 
     <app-recipeitem
-    *ngFor="let recipeEl of recipes"
-    [recipe]="recipeEl"></app-recipeitem>
+    *ngFor="let recipeEl of recipes ; let i = index"
+    [recipe]="recipeEl"
+    [index]="i"
+    ></app-recipeitem>
 
   </div>
 </div>
