added Add,clear,delete functionality on shopping-edit form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
-<app-header (actTab)="processActiveView($event)"></app-header>
+<app-header></app-header>
 <div class="container">
   <div class="row">
-<app-recipes *ngIf="activeTab ==='recipes'; else marker"></app-recipes>
-<ng-template   #marker>
-  <app-shoppinglist></app-shoppinglist>
-</ng-template>
-
+<router-outlet></router-outlet>
 
