--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,10 +7,14 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#" (click)="onSelect('recipes')">Recipes</a>
+        <a class="nav-link"
+       [routerLink]="['/recipes']" routerLinkActive="active" 
+        >Recipes</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" (click)="onSelect('shoppinglist')">Shopping List</a>
+        <a class="nav-link" 
+        [routerLink]="['/shopping-list']" routerLinkActive="active" 
+        >Shopping List</a>
       </li>
     </ul>
     <ul appDropDown class="navbar-nav d-flex">
