--- a/src/app/shoppinglist/shoping-edit/shoping-edit.component.html
+++ b/src/app/shoppinglist/shoping-edit/shoping-edit.component.html
@@ -1,33 +1,62 @@
 <div class="row">
   <div class="col-xs-12">
-    <form >
+    <form (ngSubmit)="submitItem(f)" #f="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text"
-           id="name"
+          <input
+            type="text"
+            id="name"
+            name="name"
+            ngModel
             class="form-control"
-            #nameInput>
+            #nameInput="ngModel"
+            required
+          />
+        </div>
+        <div *ngIf="!nameInput.dirty && nameInput.touched">
+          <span> Kindly input an Ingredient name </span>
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <input type="number"
-           id="amount"
+          <input
+            type="number"
+            id="amount"
             class="form-control"
-            #amountInput>
+            name="amount"
+            ngModel
+            #amountInput="ngModel"
+            required
+          />
+        </div>
+        <div>
+          <span *ngIf="!amountInput.dirty && amountInput.touched">
+            Kindly input an Amount
+          </span>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
+          <button class="btn btn-success" type="submit" [disabled]="f.invalid">
+           {{ editMode ?'Update':'Add'}}
+          </button>
           <button
-          class="btn btn-success"
-           type="submit"
-           (click)="processItem('add')"
-           >Add</button>
-          <button class="btn btn-danger" type="submit" (click)="processItem('delete')">Delete</button>
-          <button class="btn btn-primary" type="button" (click)="processItem('clear')">Clear</button>
+          class="btn btn-danger"
+          type="button"
+          (click)="onDelete()"
+        >
+          Delete
+        </button>
+        <button
+          class="btn btn-primary"
+          type="button"
+          (click)="onClear()"
+        >
+          Clear
+        </button>
         </div>
       </div>
     </form>
+   
   </div>
 </div>
