--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -52,19 +52,27 @@
           </div>
         </div>
         <div class="row gy-2">
-          <div class="col-xs-12" >
-           <div class="row" >
-            <div class="col-8">
+          <div class="col-xs-12" 
+          formArrayName="ingredients"
+          >
+           <div class="row gy-5 "
+           *ngFor="let ingredient of Ingredients.controls;let i= index"
+           [formGroupName]="i"
+           >
+            <div class="col-8 ">
              <input type="text" 
              name="ingredientName"
              id="ingredientName"
-             class="form-control">
+             class="form-control"
+             formControlName="name"
+             >
             </div>
             <div class="col-2">
               <input type="number"
                name="ingredientAmount" 
                id="ingredientAmount"
                class="form-control"
+               formControlName="amount"
                >
             </div>
             <div class="col-2">
