--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,21 +1,27 @@
 <div class="row">
   <div class="col-xs-12">
-    <form  [formGroup]="recipeForm" (ngSubmit)="onSubmitForm()">
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmitForm()">
       <div class="row">
         <div class="col-xs-12">
-          <button type="submit" class="btn btn-success"></button>
-          <button type="button" class="btn btn-danger"></button>
+          <button type="submit" 
+          class="btn btn-success"
+          [disabled]="recipeForm.invalid"
+          >Save</button>
+          <button type="button"
+           class="btn btn-danger"
+           (click)="onCancel()"
+           >Cancel</button>
         </div>
         <div class="row">
           <div class="col-xs-12">
             <div class="form-group">
               <label for="name">Name</label>
-              <input 
-              type="text"
-              id="name"
-              class="form-control"
-              formControlName="name"
-              >
+              <input
+                type="text"
+                id="name"
+                class="form-control"
+                formControlName="name"
+              />
             </div>
           </div>
         </div>
@@ -23,62 +29,73 @@
           <div class="col-xs-12">
             <div class="form-group">
               <label for="imagePath">Image URL</label>
-              <input 
-              type="text"
-              id="imagePath"
-              class="form-control"
-              formControlName="imagePath"
-              >
+              <input
+                type="text"
+                id="imagePath"
+                class="form-control"
+                formControlName="imagePath"
+              />
             </div>
           </div>
         </div>
         <div class="row gy-2">
           <div class="col-xs-12">
-            <img src="" alt="" class="img-responsive">
+            <img src="" alt="" class="img-responsive" />
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
             <div class="form-group">
               <label for="description">Description</label>
-              <textarea 
-              type="text"
-              id="imagePath"
-              class="form-control"
-              rows="6"
-              formControlName="description"
+              <textarea
+                type="text"
+                id="imagePath"
+                class="form-control"
+                rows="6"
+                formControlName="description"
               ></textarea>
             </div>
           </div>
         </div>
         <div class="row gy-2">
-          <div class="col-xs-12" 
-          formArrayName="ingredients"
-          >
-           <div class="row gy-5 "
-           *ngFor="let ingredient of Ingredients.controls;let i= index"
-           [formGroupName]="i"
-           >
-            <div class="col-8 ">
-             <input type="text" 
-             name="ingredientName"
-             id="ingredientName"
-             class="form-control"
-             formControlName="name"
-             >
+          <div class="col-xs-12" formArrayName="ingredients">
+            <div
+              class="row "
+              *ngFor="let ingredient of Ingredients.controls; let i = index"
+              [formGroupName]="i"
+              style="margin-top:10px;"
+            >
+              <div class="col-8">
+                <input
+                  type="text"
+                  name="ingredientName"
+                  id="ingredientName"
+                  class="form-control"
+                  formControlName="name"
+                />
+              </div>
+              <div class="col-2">
+                <input
+                  type="number"
+                  name="ingredientAmount"
+                  id="ingredientAmount"
+                  class="form-control"
+                  formControlName="amount"
+                />
+              </div>
+              <div class="col-2">
+                <button class="btn btn-danger">X</button>
+              </div>
             </div>
-            <div class="col-2">
-              <input type="number"
-               name="ingredientAmount" 
-               id="ingredientAmount"
-               class="form-control"
-               formControlName="amount"
-               >
+            <hr>
+            <div class="row">
+              <div class="col-xs-12">
+                <button class="btn btn-success"
+                type="button"
+                (click)="onAddIngredient()"
+                >Add Ingredient</button>
+              </div>
             </div>
-            <div class="col-2">
-              <button class="btn btn-danger">X</button>
-            </div>
-           </div>
           </div>
         </div>
       </div>
