--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -34,13 +34,14 @@
                 id="imagePath"
                 class="form-control"
                 formControlName="imagePath"
+                #imagePath
               />
             </div>
           </div>
         </div>
         <div class="row gy-2">
           <div class="col-xs-12">
-            <img src="" alt="" class="img-responsive" />
+            <img [src]="imagePath.value" alt="" class="img-fluid" />
           </div>
         </div>
         <div class="row">
@@ -84,7 +85,11 @@
                 />
               </div>
               <div class="col-2">
-                <button class="btn btn-danger">X</button>
+                <button
+                 class="btn btn-danger"
+                 type="button"
+                 (click)="onDeleteIngredient(i)"
+                 >X</button>
               </div>
             </div>
             <hr>
