--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,7 +24,9 @@
           <li class="dropdown-item"><a style="cursor:pointer;" 
             (click)="onSaveData()"
             >Save Data</a></li>
-          <li class="dropdown-item"><a style="cursor:pointer;">Fetch Data</a></li>
+          <li class="dropdown-item"><a style="cursor:pointer;"
+            (click) = "onFetchData()"
+            >Fetch Data</a></li>
         </ul>
       </li>
     </ul>
