resolved reload bug on recipelist clicks

--- a/src/app/recipes/recipelist/recipeitem/recipeitem.component.html
+++ b/src/app/recipes/recipelist/recipeitem/recipeitem.component.html
@@ -1,5 +1,5 @@
 <a  class="list-group-item clearfix" 
-[routerLink]="[index]" routerLinkActive="active" 
+[routerLink]="['./',index]" routerLinkActive="active" 
 >
   <div class="float-start">
     <h4 class="list-group-item-heading">
