--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,6 +11,11 @@
        [routerLink]="['/recipes']" routerLinkActive="active" 
         >Recipes</a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link"
+       [routerLink]="['/auth']" routerLinkActive="active" 
+        >Authentication</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" 
         [routerLink]="['/shopping-list']" routerLinkActive="active" 
