--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,6 +1,16 @@
 <div class="row">
   <div class="col-xs-12 col-md-6 col-md-offset-3">
-    <form  (ngSubmit)="onSubmitForm(authform)"  #authform="ngForm">
+    <div class="alert alert-danger"
+    *ngIf="error"
+    >
+      <p>{{ error }}</p>
+    </div>
+    <div *ngIf="isLoading" style="text-align:center;">
+      <app-loading-spinner></app-loading-spinner>
+    </div>
+    <form  (ngSubmit)="onSubmitForm(authform)"  #authform="ngForm"
+    *ngIf="!isLoading"
+    >
       <div class="form-group">
         <label for="email">E-Mail</label>
         <input type="email" name="email" id="email" class="form-control"
@@ -10,7 +20,7 @@
         />
       </div>
       <div class="form-group">
-        <label for="passowrd">Password</label>
+        <label for="password">Password</label>
         <input
           type="password"
           name="password"
