--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,15 +6,19 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item active"
+      *ngIf="isAuthenticated"
+      >
         <a class="nav-link"
        [routerLink]="['/recipes']" routerLinkActive="active" 
         >Recipes</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item active"
+      *ngIf="!isAuthenticated"
+      >
         <a class="nav-link"
        [routerLink]="['/auth']" routerLinkActive="active" 
-        >Authentication</a>
+        >Authenticate</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" 
@@ -22,8 +26,14 @@
         >Shopping List</a>
       </li>
     </ul>
-    <ul appDropDown class="navbar-nav d-flex">
-      <li  class="dropstart ">
+
+    <ul  class="navbar-nav ms-auto mb-2 mb-lg-0">
+      <li  *ngIf="isAuthenticated">
+        <a style="cursor:pointer;" 
+        (click)="onLogout()"
+        >Logout</a>
+      </li>
+      <li appDropDown class="dropstart " *ngIf="isAuthenticated">
         <a   class="dropdown-toggle " role="button">Manage</a>
         <ul  class="dropdown-menu">
           <li class="dropdown-item"><a style="cursor:pointer;" 
